main.tf
resource "aws_security_group" "jenkins_sg" {
  name        = "jenkins_sg"
  description = "Allow Jenkins Traffic"
  vpc_id      = var.vpc_id
  
  ingress {
    description     = "Allow from Personal CIDR block"
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    cidr_blocks     = [var.cidr_block]
  }
  
  ingress {
    description     = "Allow SSH from Personal CIDR block"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks     = [var.cidr_block]
  }
  
  egress {
    from_port        = 0
    to_port          = 0
    protocol         ="-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  
  tags = {
    Name = "Jenkins SG"
  }
}
